[package]
name = "argolysis_studios_game_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
toml = "0.8.0"
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["trace"] }